[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nest-asyncio>=1.6.0",
    "pydantic>=2.11.1",
    "pydantic-ai>=0.0.49",
    "pydantic-settings>=2.8.1",
    "questionary>=2.1.0",
    "reportlab>=4.3.1",
    "streamlit>=1.44.1",
]
